style.css
body {
    height: 100vh;
    margin: 0;
    overflow: hidden;
    font-family: Roboto, sans-serif;

    display: flex;
    flex-direction: column;
}
img {
     
    color: #E5E7EB;
     
}

ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

a {
    text-decoration: none;
    color: #E5E7EB;
}

.header {
    display: flex;
    flex-direction: column;
    background-color: #1F2937;
}

.header-row-one img {
    font-weight: bold;
   font-size: 24px; 
   color: #F9FAF8
}

.header-row-one {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 8px 64px 32px 64px;
    padding: 16px;
}

.left h1 {
    font-size: 48px;
    font-weight: bolder;
    color: #F9FAF8;
}

 .left h3 {
    font-size: 18px;
    color: #E5E7EB;
}

.header-links {
    display: flex;
    justify-content: space-between;
    gap: 16px;
    font-size: 18px;
    color: #E5E7EB;
    
}

.header-row-two {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 8px 64px 32px 64px;
}

button {
    color:#F9FAF8;
    font-weight: bold;
    background-color: #3882F6;
    border-radius: 4px;
    border: none;
    text-align: center;
    margin: auto;
    padding-inline: 24px;
}

.content {
    display: flex;
    flex-direction: column;
    text-align: center;
    flex: 1;

    background-color: #ffffff;
}

.container {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 16px;
}
.sample {
    max-width: 300px;

}
.sample img {
    height: 200px;
    width: 200px;
}

.quote {
    background-color: #E5E7EB;
}

.sign-up-box {
    display: flex;
    align-content: center;
    color: #ffffff;
    border-radius: 16px;
    padding: 32px;
    margin: 92px 128px 92px 128px;
    background-color: #3882F6;
}

.left-text {
    display: flex;
    flex-direction: column;
    margin: auto;
}
.left-text #top {
    font-weight: bolder;
    font-size: larger;
}
.sign-up-box button {  
    border-radius: 4px;
    border: 2px solid #ffffff;
}

.footer {
    display: flex;
    justify-content: center;
    padding: 32px;
    background-color: #1F2937;
}

